# namse-funny-rust-tour

./: Cargo.toml
src/: client.rs  db.rs  handshake.rs  main.rs  server.rs
todo-app/: .gitignore  Cargo.toml
todo-app/src/: delete_todo.rs  edit_todo.rs  main.rs  todo_list.rs  todo_selector.rs
websocket-server/: Cargo.toml
websocket-server/src/: handshake.rs
